--- a/tasks-done/Daniel_Sapovalov_gr2/index.html
+++ b/tasks-done/Daniel_Sapovalov_gr2/index.html
@@ -3,75 +3,105 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Przykładowa strona HTML</title>
+  <title>Zadania HTML, CSS i JS</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <!-- NAGŁÓWEK STRONY -->
   <header>
-    <h1>Moja Strona Internetowa</h1>
-    <p>Witamy na stronie demonstracyjnej z formularzem, tabelą i strukturą semantyczną.</p>
+    <h1>Moja Strona</h1>
   </header>
 
-  <!-- GŁÓWNA SEKCJA STRONY -->
   <main>
-
     <!-- FORMULARZ -->
     <section>
       <h2>Formularz rejestracyjny</h2>
-      <form action="#" method="post">
-        <label for="username">Nazwa użytkownika:</label><br>
-        <input type="text" id="username" name="username" placeholder="Wpisz nazwę użytkownika" required><br><br>
+      <form id="signupForm">
+        <label for="username">Nazwa użytkownika:</label>
+        <input type="text" id="username" name="username" placeholder="np. Janek">
 
-        <label for="email">Adres e-mail:</label><br>
-        <input type="email" id="email" name="email" placeholder="Wpisz adres e-mail" required><br><br>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" placeholder="np. jan@wp.pl">
 
-        <label for="password">Hasło:</label><br>
-        <input type="password" id="password" name="password" placeholder="Wpisz hasło" required><br><br>
+        <label for="password">Hasło:</label>
+        <input type="password" id="password" name="password">
 
-        <button type="submit">Zarejestruj się</button>
+        <button type="submit">Wyślij</button>
       </form>
     </section>
 
-    <!-- ARTYKUŁ Z TABELĄ PRODUKTÓW -->
-    <article>
-      <h2>Nasze produkty</h2>
-      <p>Poniżej znajduje się tabela z przykładowymi produktami i ich opisami:</p>
-
-      <table border="1" cellpadding="8" cellspacing="0">
-        <thead>
-          <tr>
-            <th>Nazwa produktu</th>
-            <th>Cena</th>
-            <th>Opis</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Telefon X200</td>
-            <td>2499 zł</td>
-            <td>Nowoczesny smartfon z ekranem OLED i aparatem 108 MP.</td>
-          </tr>
-          <tr>
-            <td>Laptop ProBook</td>
-            <td>3999 zł</td>
-            <td>Wydajny laptop do pracy biurowej i zadań kreatywnych.</td>
-          </tr>
-          <tr>
-            <td>Słuchawki SoundMax</td>
-            <td>499 zł</td>
-            <td>Bezprzewodowe słuchawki z redukcją szumów i długim czasem pracy.</td>
-          </tr>
-        </tbody>
+    <!-- TABELA -->
+    <section>
+      <h2>Tabela produktów</h2>
+      <table border="1">
+        <tr>
+          <th>Nazwa</th>
+          <th>Cena</th>
+          <th>Opis</th>
+        </tr>
+        <tr>
+          <td>Myszka</td>
+          <td>50 euro</td>
+          <td>Bezprzewodowa myszka komputerowa</td>
+        </tr>
+        <tr>
+          <td>Klawiatura</td>
+          <td>100 euro</td>
+          <td>Podświetlana klawiatura</td>
+        </tr>
       </table>
-    </article>
+    </section>
 
+    <!-- FLEXBOX -->
+    <section>
+      <h2>Przykład Flexbox</h2>
+      <div class="flex-container">
+        <div class="box">A</div>
+        <div class="box">B</div>
+        <div class="box">C</div>
+      </div>
+    </section>
+
+    <!-- POZYCJONOWANIE -->
+    <section>
+      <h2>Pozycjonowanie</h2>
+      <div class="relative-box">
+        To element z <b>position: relative</b>
+        <div class="absolute-box">To element absolute</div>
+      </div>
+      <div class="fixed-box">To element fixed (zostaje przy przewijaniu)</div>
+    </section>
+
+    <!-- HOVER I TRANSITION -->
+    <section>
+      <h2>Hover i Transition</h2>
+      <a href="#" class="hover-link">Najedź na mnie</a>
+    </section>
+
+    <!-- JAVASCRIPT -->
+    <section>
+      <h2>JavaScript</h2>
+
+      <button id="clickBtn">Kliknij mnie</button>
+
+      <br><br>
+      <button id="sumBtn">Oblicz sumę tablicy</button>
+      <button id="doubleBtn">Podwój wartości</button>
+
+      <br><br>
+      <input type="number" id="numberInput" placeholder="Podaj liczbę">
+      <button id="checkBtn">Sprawdź parzystość</button>
+
+      <br><br>
+      <div id="colorBox" class="color-box">Kliknij przycisk, by zmienić kolor</div>
+      <button id="colorBtn">Zmień kolor</button>
+    </section>
   </main>
 
-  <!-- STOPKA STRONY -->
   <footer>
-    <p>&copy; 2025 Moja Strona. Wszystkie prawa zastrzeżone.</p>
+    <p>&copy; <span id="2025"></span> Moja Strona</p>
   </footer>
 
+  <script src="script.js"></script>
 </body>
 </html>
