--- a/tasks-done/Daniel_Sapovalov_gr2/index.html
+++ b/tasks-done/Daniel_Sapovalov_gr2/index.html
@@ -99,7 +99,7 @@
   </main>
 
   <footer>
-    <p>&copy; <span id="2025"></span> Moja Strona</p>
+    <p>&copy; Moja Strona</p>
   </footer>
 
   <script src="script.js"></script>
