--- a/tasks-done/Kamila_Kostyliova_gr2/Zadanie_3/index.html
+++ b/tasks-done/Kamila_Kostyliova_gr2/Zadanie_3/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio Kamila</title>
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Kamila – Fioletowa Bajkowa Strona</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
@@ -24,11 +24,11 @@
             <div class="media-block">
                 <h3>📹 Film</h3>
                 <video width="360" controls autoplay loop muted>
-                    <source src="video.mp4" type="video/mp4">
+                    <source src="video.mp4" type="video/mp4" />
                     Twoja przeglądarka nie obsługuje wideo.
                 </video>
                 <p class="media-text">
-                    🎶 <em>“Listen to the beat of your heart and keep on dancing.”</em><br>
+                    🎶 <em>“Listen to the beat of your heart and keep on dancing.”</em><br />
                     — film o pasji, rytmie i radości z tworzenia.
                 </p>
             </div>
@@ -36,11 +36,11 @@
             <div class="media-block">
                 <h3>🎵 Muzyka</h3>
                 <audio controls autoplay loop>
-                    <source src="music.mp3" type="audio/mpeg">
+                    <source src="music.mp3" type="audio/mpeg" />
                     Twoja przeglądarka nie obsługuje audio.
                 </audio>
                 <p class="media-text">
-                    🌿 <em>“Plant love, grow peace.”</em><br>
+                    🌿 <em>“Plant love, grow peace.”</em><br />
                     — utwór o harmonii, naturze i ciepłym spokoju serca.
                 </p>
             </div>
@@ -56,4 +56,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
