--- a/lekcja-1/91610/zad1.html
+++ b/lekcja-1/91610/zad1.html
@@ -14,40 +14,40 @@
     <h3>Nagłówek H3</h3>
     
     <p class="text-paragraph">
-        To jest przykładowy akapit tekstu (paragraph). Służy do wyświetlania treści na stronie.
+        To jest przykładowy akapit tekstu. Służy do wyświetlania treści na stronie.
     </p>
 
     <div id="unique-box">
-        To jest element DIV z unikalnym ID. Ma obramowanie i tło.
+        To jest element DIV z unikalnym ID. Ma ramki i tło.
     </div>
 
     <div class="styled-box">
-        To jest element DIV z klasą. Służy do grupowania treści.
+        To jest element DIV z klasą. Służy do grupowania tekstu.
     </div>
 
     <hr>
     <h3>Linki i Obrazki</h3>
     <a href="https://www.google.com" target="_blank">Kliknij tutaj, aby przejść do Google</a>
     <br><br>
-    <img src="https://picsum.photos/300/200" alt="Losowy obrazek z internetu">
+    <img src="https://picsum.photos/300/200" alt="Random obrazek z internetu">
 
     <hr>
     <h3>Listy</h3>
     
-    <p>Lista uporządkowana (ordered list):</p>
+    <p>Lista uporządkowana :</p>
     <ol>
         <li>Pierwszy element listy</li>
         <li>Drugi element listy</li>
         <li>Trzeci element listy</li>
     </ol>
 
-    <p>Lista nieuporządkowana (unordered list):</p>
+    <p>Lista nieuporządkowana:</p>
     <ul>
         <li>Element punktowany A</li>
         <li>Element punktowany B</li>
     </ul>
 
-    <p id="js-message">Ten tekst zostanie zmieniony przez JavaScript po załadowaniu strony.</p>
+    <p id="js-message">ten tekst zostanie zmieniony przez JavaScript po załadowaniu strony.</p>
 
     <script src="script.js"></script>
 </body>
